# jconverter

./: .gitattributes  Analysis Summary Excel vs JSON Converter Logic.md  README-JSON.md  README-PROCESS.md  README.md  claude-output-02.html  claude-output-03.html  claude-output-04.html  claude-output-05.html  claude-output-06.html  claude-output-07.html  claude-output.html  debug_concept_lookup.py  excel-dump.txt  excel-sample-output.html  final-01.json  final-02.html  missing_concepts_summary.json  output.html  package-lock.json  pyproject.toml  sample-output.html  working-input-02.json  working-input-03.json  working-input.json
.claude/country/: countries.xsd
.claude/country/2024-01-31/: countries-label-en.xml
.github/: copilot-instructions.md  copilot-setup-steps.yml
.github/workflows/: test-and-lint.yaml
digital-templates/: VSME-Digital-Template-1.0.1.xlsx  VSME-Digital-Template-Sample-1.0.1.xlsx  example-vsme-data.json
exports/: reportname-01.html  reportname-02.html  test-direct-output.html
imports/: reportname-01.json  reportname-02.json
progress/: 02report01.md  03promt02.md  04report02.md  05promt03.md  06report03.md  07IMPLEMENTATION_SUMMARY.md  08how-to-use.md  09Summary.md  10WorkingInputJsonExtending.md
promts/: promt01.md
scripts/: check-report.py  dump-taxonomy.py  parse-and-ixbrl.py  parse-json-and-ixbrl.py  update-taxonomy.py
src/mireport/: __init__.py  conversionresults.py  enhanced_jsonprocessor.py  excelprocessor.py  excelutil.py  filesupport.py  jsonprocessor.py  localise.py  stringutil.py  taxonomy.py  typealiases.py  webapp.py  xbrlreport.py  xml.py
src/mireport/arelle/: report_info.py  support.py  taxonomy_info.py
src/mireport/data/: json_schema.json
taxonomy/chunks/: concepts_country.json  concepts_waste.json  dimensions.json  presentation.json
taxonomy/vsme-2024-12-17/: vsme-2024-12-17.json
taxonomy/vsme-2025-07-30/: index.json  vsme-2025-07-30.json
tests/integrationTests/: test_json_integration.py
tests/unitTests/: test_filesupport.py  test_jsonprocessor.py  test_localise.py
(+47 files in other folders)
